--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,9 +2,30 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Assignment Solution for Module 2</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<h1>Our Menu</h1>
+	<div class="row">
+		<div class="item1 col-lg-4 col-md-6 col-sm-12">
 
+		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
+			<div class="type1">Chicken</div>
+		</div>
+
+		<div class="item2 col-lg-4 col-md-6 col-sm-12">
+
+		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
+			<div class="type2">Beef</div>
+	</div>
+
+		<div class="item3 col-lg-4 col-md-12 col-sm-12">
+		
+		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
+			<div class="type3">Sushi</div>
+		</div>
+	</div>
 </body>
 </html>
